# cli-parser

./: .gitignore  CMakeLists.txt  README.md
examples/: basic.cpp  comprehensive.cpp
include/: cli_parser.hpp  error_handler_module.hpp  parser_module.hpp  type_converter.hpp  validation_module.hpp
plans/: analysis_report.md  develop_plans.md  develop_plans_from_deepseek.md  develop_plans_from_gpt.md  refactoring_plan.md
tests/: test_main.cpp
